# Linear-Algebra

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  matrix.cpp  matrix.h
commandline/: CMakeLists.txt  commandline.cpp  commandline.h
gaussj/: CMakeLists.txt  gaussj.cpp  gaussj.h  gaussj_AbKDs.cpp  gaussj_AbKDs.h
ludec/: CMakeLists.txt  ludec.cpp  ludec.h
matrix/: CMakeLists.txt  matrix.cpp  matrix.h
