cmake_minimum_required (VERSION 2.6)
project (LinearAlgebra)
set (LinearAlgebra_VERSION_MAJOR 1)
set (LinearAlgebra_VERSION_MINOR 0)

include_directories ("${PROJECT_SOURCE_DIR}/matrix")
include_directories ("${PROJECT_SOURCE_DIR}/commandline")
include_directories ("${PROJECT_SOURCE_DIR}/gaussj")
include_directories ("${PROJECT_SOURCE_DIR}/ludec")
add_subdirectory(matrix)
add_subdirectory(commandline)
add_subdirectory(gaussj)
add_subdirectory(ludec)

add_executable (LinearAlgebra main.cpp)
target_link_libraries(LinearAlgebra Matrix)
target_link_libraries(LinearAlgebra Commandline)
target_link_libraries(LinearAlgebra LUdec)
target_link_libraries(LinearAlgebra GaussJ)
target_link_libraries(LinearAlgebra GaussJAbKDs)
